--- a/src/components/Education/Education.css
+++ b/src/components/Education/Education.css
@@ -153,7 +153,7 @@ html, body {
 }
 
 .education-item li::before {
-    content: '▶';
+    /*content: '▶';*/
     position: absolute;
     left: 0;
     color: var(--secondary-color);
